OAuth2Server/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-server
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-server
  template:
    metadata:
      labels:
        app: oauth2-server
    spec:
      containers:
        - name: oauth2-server
          image: felixmurcia/oauth2server:v20260211-1751
          
          # Ejecuta tu script de producción dentro del contenedor
          command: ["/bin/sh", "-c", "/app/run-prod.sh"]

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: oauth2-data
              mountPath: /data

      volumes:
        - name: oauth2-data
          persistentVolumeClaim:
            claimName: oauth2-pvc
