OAuth2Server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-server
  namespace: auth
spec:
  selector:
    app: oauth2-server
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
